--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,10 @@
 .weather-app {
   margin: 0 20px;
   text-transform: capitalize;
-  
+}
+
+@media only screen and (max-width: 600px) {
+  .weather-app {
+    margin: 0 10px;
+  }
 }
