--- a/src/styles/ForecastDetails.css
+++ b/src/styles/ForecastDetails.css
@@ -1,10 +1,21 @@
 .forecast-details {
+  margin-top: 5%;
+  font-size: x-large;
+  border-radius: 0px 0px 0px;
+  background: silver;
+  color: white;
+  text-align: center;
+}
 
-    margin-top: 5%;
-    font-size: x-large;
-    border-radius: 0px 0px 0px;
-      background: silver;
-    color: white;
-    text-align: center;
+@media only screen and (max-width: 600px) {
+  .forecast-details {
+    order: -1;
+    margin-top: 2%;
+    font-size: large;
+  }
 
+  .forecast-details button {
+    font-size: 0.8em;
+    padding: 0.25em 0.5em;
+  }
 }
