--- a/src/styles/ForecastSummaries.css
+++ b/src/styles/ForecastSummaries.css
@@ -1,4 +1,20 @@
 .forecast-summaries {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+    .forecast-summaries {
+        flex-direction: column;
+    }
+
+    .forecast-summary {
+        margin-bottom: 1em;
+        width: 90%;
+        max-width: 400px;
+    }
+
+    .forecast-summary:nth-of-type(2n+1) {
+        margin-right: 1em;
+    }
 }
