--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,3 +16,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 600px) {
+  body {
+    margin: 10px;
+  }
+}
